Ash: Fix test flakiness from aync shelf alignment.

The 1st patch set triggers the flaky failure reliably and adds a fix.
The proposed fix inits display work areas with BOTTOM_LOCKED insets.
(prevents test flakes on async shelf alignment init and bounds changes)

The 2nd patch set removes the trigger and re-enables autofill tests.

This may cause window movement on left/right alignment user login?
(if windows from a prior session are restored before shelf alignment)

Alternative fix ideas:
1) Always initialize the primary display's shelf to BOTTOM alignment?
   (matches login appearance, keep secondary display shelves hidden)
2) Have InProcessBrowserTest init the alignment synchronously?
   (limits the workaround's scope to tests, where symptoms are felt)
3) Make (tests) wait for shelf init before loading user windows?

Bug: 834369, 834768
Test: No AutofillInteractiveTests flakes on Chrome OS.
Change-Id: Ibb8ea879a81ff198a1a29e6c8de73cb5e8acd3c4
Reviewed-on: https://chromium-review.googlesource.com/1020195
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553126}
Former-commit-id: e6a058bbedd2afe2a63d67159d00968eb845eecf